--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = custom-py-docx
-description = Abstra
+description = Abstract Python-Docx
 long_description_content_type = text/markdown
 url = https://github.com/cristianovisk/custom-py-docx
 project_urls =
