--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,13 @@
 [build-system]
-requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
-build-backend = "setuptools.build_meta"
+requires = ["flit_core >=3.2,<4"]
+build-backend = "flit_core.buildapi"
 
-[tool.setuptools_scm]
+[project]
+name = "custom_py_docx"
+authors = [{name = "Renato Pinheiro", email = "renato.dev.pinheiro@gmail.com"}]
+license = {file = "LICENSE"}
+classifiers = ["License :: OSI Approved :: MIT License"]
+dynamic = ["version", "description"]
+
+[project.urls]
+Home = "https://github.com/cristianovisk/custom-py-docx"
